# ModelarDB

./: .gitignore  CHANGELOG.md  README.md  build.sbt  modelardb.conf  plugins.sbt
.github/workflows/: build-master.yml  compile-and-test.yml  scala.yml
conf/: dimensions.txt  edge-1-ingest-dimensions.conf  edge-1-ingest.conf  edge-1-run.conf  edge-2-ingest-dimensions.conf  edge-2-ingest.conf  edge-2-run.conf  edge-dimensions.conf  flight-test-edge.conf  flight-test-server.conf  ingest-with-dimensions.conf  redd-data.conf  redd-ingest.conf  redd-query.conf  run-with-dimensions.conf  spark-test.conf  spark.conf
docs/: CNAME  index.md
project/: plugins.sbt
python/: arrow-flight.py  flight-client.py  flight-listener.py  pyproject.toml  socket-upload.py  test-data.csv
src/main/java/dk/aau/modelardb/core/: Configuration.java  Correlation.java  DataPoint.java  Dimensions.java  Partitioner.java  SegmentGenerator.java  SegmentGroup.java  Storage.java  TimeSeries.java  TimeSeriesGroup.java  WorkingSet.java
src/main/resources/: application.conf  logback.xml
src/main/scala/dk/aau/modelardb/: Interface.scala  InternalTypes.scala  Main.scala  OffsetType.scala
src/main/scala/dk/aau/modelardb/akka/: AkkaSystem.scala
src/main/scala/dk/aau/modelardb/arrow/: ArrowFlightClient.scala  ArrowFlightProducer.scala  ArrowFlightServer.scala  ArrowUtil.scala  Schemas.scala
src/main/scala/dk/aau/modelardb/config/: Config.scala
src/test/resources/: application-test.conf
src/test/scala/dk/aau/modelardb/: H2Provider.scala  TestUtil.scala
(+111 files in other folders)
